# xlsConvert

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: excel.rs  lib.rs  main.rs
