[package]
name = "xls-convert"
version = "0.1.0"
edition = "2021"

[lib]
name = "xls_convert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26"
rust_xlsxwriter = "0.79"
